@@ -1,0 +1,17 @@
+Parent=MainPage
+
+Name="About this product"
+Name-logical-id=qtn_sett_main_aboutmy
+
+Value="Warranty, About product"
+Value-logical-id=qtn_sett_main_aboutmy_label2
+
+Icon=icon-m-settings-description
+
+Aliases=About,About my device,About my NXX
+Translation-catalogs=
+
+AutoStartApplet=1
+
+Order=110
+
