@@ -1,0 +1,18 @@
+Parent=MainPage
+
+Name=Bluetooth
+Name-logical-id=qtn_sett_main_bluetooth
+
+Value="Manage BT connections"
+Value-logical-id=qtn_sett_main_bluetooth_label2
+
+# TODO we need an icon id
+Icon=icon-m-applet-settings
+
+Aliases=
+Translation-catalogs=
+
+AutoStartApplet=1
+
+Order=30
+
