@@ -1,0 +1,18 @@
+Parent=MainPage
+
+Name=Display
+Name-logical-id=qtn_sett_main_display
+
+Value="Adjust brightness"
+Value-logical-id=qtn_sett_main_display_label2
+
+# TODO we need an icon id
+Icon=icon-m-applet-settings
+
+Aliases=
+Translation-catalogs=
+
+AutoStartApplet=1
+
+Order=20
+
