@@ -1,0 +1,15 @@
+Parent=MainPage
+
+Name="Notifications & Events"
+Name-logical-id=qtn_sett_main_notifications
+
+Value="Home screen feed, Alerts"
+Value-logical-id=qtn_sett_main_notifications_label2
+
+Icon=icon-m-settings-notification
+
+Aliases=Notifications
+Translation-catalogs=
+
+Order=70
+
