@@ -1,0 +1,16 @@
+Parent=MainPage
+
+Name="Time & Date"
+Name-logical-id=qtn_sett_main_timelanguage
+
+Value="Time, Date, Region"
+Value-logical-id=qtn_sett_main_timelanguage_label2
+
+# TODO we need an icon id
+Icon=icon-m-applet-settings
+
+Aliases=qtn_sett_main_timedate
+Translation-catalogs=
+
+Order=90
+
