@@ -1,0 +1,15 @@
+Parent=Notifications
+
+Name="Events feed"
+Name-logical-id=qtn_home_events_settings_title
+
+Value=
+Value-logical-id=
+
+Icon=
+
+Aliases=
+Translation-catalogs=home
+
+Order=10
+
