@@ -41,6 +41,8 @@
 	DEFINES += DCP_CATEGORY_DIR=\\\"\"$$DCP_CATEGORY_DIR\"\\\"
 }
 }
+
+isEmpty(HOST_ARCH) {
 HOST_ARCH=$$system(dpkg-architecture -qDEB_HOST_GNU_TYPE || echo meego)
 message("arch $$HOST_ARCH")
 contains(HOST_ARCH,meego){
@@ -54,3 +56,6 @@ meego {
 } else {
 message("NON-MEEGO")
 }
+
+}
+
